2012-03-29  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 3408288 ] Safer Signal Handlers

	* interopProvider.c, providerDrv.c, control.c, sfcb.cfg.pre.in:
	[ 3512575 ] Add indication delivery thread limit and timeout

2012-03-28  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlOps.y:
	[ 3510456 ] GetProperty calls not passing keys to providers
	(patch by Zane Bitter)

	* cimRequest.c:
	[ 3510458 ] Malformed XML response to GetProperty
	(patch by Zane Bitter)

2012-03-16 Dave Heller <hellerda@us.ibm.com>

	* control.c, indCIMXMLExport.c, sfcb.cfg.pre.in:
	[ 3506453 ] Support peer cert verification for SSL indications

2012-03-15  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* brokerUpc.c:
	[ 3504607 ] CMPIRole Support in brokerUpc

2012-03-14  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* brokerUpc.c, cimRequest.c, cimRequest.h, cimXmlOps.y,
	  cimcClientSfcbLocal.c, httpAdapter.c, providerDrv.c,
	  providerMgr.c, providerMgr.h, sfcBasicPAMAuthentication.c
	[ 3367363 ] Add CMPIRole Support

2012-03-12  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c, sfcBasicPAMAuthentication.c:
	[ 3367361 ] Allow for releasing auth handle after CIM request completes

2012-03-10  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	[ 3457460 ] PAM_RHOST set wrong

	* httpAdapter.c, sfcBasicPAMAuthentication.c:
	[ 3367332 ] RHOST Support for PAM

2012-03-09  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c, control.c, sfcb.cfg.pre.in:
	[ 3367333 ] New entry point for authentication library

2012-03-08  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* fileRepository.c:
	[ 3499930 ] Check file repository writes

	* httpAdapter.c, cimRequest.c, sfcBroker.c:
	[ 3440300 ] Allow forced chunked responses
	[ 3492362 ] Problem with whitespace trimming if local connect only

2012-03-07 Dave Heller <hellerda@us.ibm.com>

	* httpAdapter.c:
	[ 3498719 ] Better SSL error reporting for sfcb
