@@ -126,6 +126,7 @@ Bugs Fixed:
 - 3510458 Malformed XML response to GetProperty
 - 3510456 GetProperty calls not passing keys to providers
 - 3408288 Safer Signal Handlers
+- 3487419 TestIndication Provider Does Not Enable Correctly
 
 Changes in 1.3.13
 =================
